frontend-lb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
